--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.3.0",
+    "@nestjs/mongoose": "^11.0.3",
     "@nestjs/platform-express": "^10.3.0",
     "@nestjs/swagger": "^7.1.10",
     "@prisma/client": "^5.8.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "mongodb": "^6.20.0",
     "mysql2": "^3.6.5",
     "nest-winston": "^1.9.4",
     "prisma": "^5.8.0",
