--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,42 @@ services:
       - ./logs:/app/logs
     restart: unless-stopped
 
+  # phpMyAdmin - MySQL Web UI
+  phpmyadmin:
+    image: phpmyadmin:latest
+    container_name: dynamic-webservice-phpmyadmin
+    environment:
+      PMA_HOST: mysql
+      PMA_USER: root
+      PMA_PASSWORD: rootpassword
+      PMA_DATABASE: dynamic_webservice
+    ports:
+      - "8001:80"
+    depends_on:
+      - mysql
+    networks:
+      - dynamic-network
+    restart: unless-stopped
+
+  # MongoDB Express - MongoDB Web UI
+  mongo-express:
+    image: mongo-express:latest
+    container_name: dynamic-webservice-mongo-express
+    environment:
+      ME_CONFIG_MONGODB_ADMIN_USERNAME: admin
+      ME_CONFIG_MONGODB_ADMIN_PASSWORD: password
+      ME_CONFIG_MONGODB_URL: mongodb://admin:password@mongodb:27017/
+      ME_CONFIG_BASICAUTH: "true"
+      ME_CONFIG_BASICAUTH_USERNAME: admin
+      ME_CONFIG_BASICAUTH_PASSWORD: admin123
+    ports:
+      - "8081:8081"
+    depends_on:
+      - mongodb
+    networks:
+      - dynamic-network
+    restart: unless-stopped
+
 volumes:
   mysql_data:
   mongodb_data:
